force-app/main/default/objects/Cust1__c/Cust1__c.object-meta.xml
<CustomObject>
    <label>Cust1</label>
    <nameField>
        <label>Cust1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cust1</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>