force-app/main/default/objects/Cust1__c/fields/Flavours__c.field-meta.xml
<CustomField>
    <fullName>Flavours__c</fullName>
    <label>Flavours</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chocolate</fullName>
            </value>
            <value>
                <fullName>Vanilla</fullName>
            </value>
            <value>
                <fullName>Strawberry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>