force-app/main/default/objects/Cust1__c/fields/Sponsor_Company__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cust1</relationshipLabel>
    <relationshipName>Cust1</relationshipName>
    <type>Lookup</type>
</CustomField>