force-app/main/default/objects/Cust1__c/fields/Sponsor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sponsor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cust1</relationshipLabel>
    <relationshipName>Cust1</relationshipName>
    <type>Lookup</type>
</CustomField>