force-app/main/default/objects/Cust1__c/fields/Toppings__c.field-meta.xml
<CustomField>
    <fullName>Toppings__c</fullName>
    <label>Toppings</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Flavours__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nuts</fullName>
            </value>
            <value>
                <fullName>Berries</fullName>
            </value>
            <value>
                <fullName>Cream</fullName>
            </value>
            <value>
                <fullName>Sprinklers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>