force-app/main/default/objects/Cust1__c/recordTypes/Corporate.recordType-meta.xml
<RecordType>
    <fullName>Corporate</fullName>
    <active>true</active>
    <label>Corporate</label>
</RecordType>